@@ -3,23 +3,20 @@ package me.sargunvohra.mcmods.leveluphp.advancement
 import com.google.gson.JsonDeserializationContext
 import com.google.gson.JsonObject
 import me.sargunvohra.mcmods.leveluphp.LevelUpHp
+import me.sargunvohra.mcmods.leveluphp.hpLevelHandler
+import me.sargunvohra.mcmods.leveluphp.level.HpLevelHandler
 import net.minecraft.advancement.PlayerAdvancementTracker
 import net.minecraft.advancement.criterion.AbstractCriterionConditions
 import net.minecraft.advancement.criterion.Criterion
 import net.minecraft.server.network.ServerPlayerEntity
+import java.lang.Exception
+import java.util.function.Predicate
 
 object LevelUpCriterion : Criterion<LevelUpCriterion.Conditions> {
 
     private val handlers = mutableMapOf<PlayerAdvancementTracker, Handler>()
 
     override fun getId() = LevelUpHp.id("player_levelled_up")
-
-    override fun conditionsFromJson(
-        jsonObject: JsonObject,
-        deserializationContext: JsonDeserializationContext
-    ): Conditions {
-        return Conditions()
-    }
 
     override fun beginTrackingCondition(
         advancementTracker: PlayerAdvancementTracker,
@@ -44,20 +41,36 @@ object LevelUpCriterion : Criterion<LevelUpCriterion.Conditions> {
         handlers.remove(advancementTracker)
     }
 
-    fun handle(player: ServerPlayerEntity) {
-        handlers[player.advancementManager]?.handle()
+    override fun conditionsFromJson(
+        jsonObject: JsonObject,
+        deserializationContext: JsonDeserializationContext
+    ): Conditions {
+        return Conditions(
+            LevelPredicate.deserialize(jsonObject.get("level"))
+        )
     }
 
-    class Conditions : AbstractCriterionConditions(LevelUpCriterion.id)
+    fun handle(player: ServerPlayerEntity) {
+        try {
+            handlers[player.advancementManager]?.handle(player.hpLevelHandler)
+        } catch (e: Exception) {
+            e.printStackTrace()
+            throw e
+        }
+    }
+
+    class Conditions(
+        private val level: LevelPredicate
+    ) : AbstractCriterionConditions(LevelUpCriterion.id),
+        Predicate<HpLevelHandler> by level
 
     private class Handler(
         private val tracker: PlayerAdvancementTracker
     ) : MutableSet<Criterion.ConditionsContainer<Conditions>> by mutableSetOf() {
 
-        fun handle() {
-            forEach {
-                it.apply(tracker)
-            }
+        fun handle(hpLevelHandler: HpLevelHandler) {
+            this.filter { it.conditions.test(hpLevelHandler) }
+                .forEach { it.apply(tracker) }
         }
     }
 
